--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,12 @@ body {
     background-color: rgb(0, 0, 255);
     opacity: 0.8;
 }
-#innerTable {
-
+table.innerTable {
+    border-width: 2px;
+    width: 100%;
+    height: 400px;
+    border-style: dashed;
+    background-color: rgb(255, 255, 255);
 }
 th, td {
     border:1px solid black;
@@ -20,4 +24,8 @@ th, td {
 }
 ul {
     list-style-type: upper-latin
+}
+td.innerclass {
+    width: 25%;
+    height: 25%;
 }
