--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,7 @@ body {
     border-style: dashed;
     border-color: black;
     border-radius: 10px;
-    background-color: rgb(0, 0, 255);
-    opacity: 0.8;
+    background-color: rgba(0, 0, 255, 80%);
 }
 table.innerTable {
     border-width: 2px;
@@ -28,4 +27,13 @@ ul {
 td.innerclass {
     width: 25%;
     height: 25%;
+}
+td.yellow {
+    background-color: hsla(39, 100%, 50%, 90%);
+}
+td.green {
+    background-color: hsla(135, 100%, 50%, 90%);
+}
+td.purple {
+    background-color: hsla(282, 100%, 50%, 90%);
 }
